# sacweather_cpp

./: CMakeLists.txt  README.md  build.bat  imgui.ini  sacwdev.bat  sacweather.sublime-workspace
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/tjdickerson/sacweather/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/data/: cnt_us.shx  st_us.shp  st_us.shx  wsrlist
android/app/src/main/cpp/: CMakeLists.txt  sacw-lib.cpp
android/app/src/main/java/com/tjdickerson/sacweather/: MainActivity.java  SacwLib.java  SacwMapActivity.java
android/app/src/main/java/com/tjdickerson/sacweather/data/: NexradProductInfo.java  RadarView.java  WsrInfo.java
android/app/src/main/java/com/tjdickerson/sacweather/listener/: SacTouchListener.java
android/app/src/main/java/com/tjdickerson/sacweather/task/: FetchResponse.java  FileDownloader.java  FileFetcher.java  RadarExecutorService.java
android/app/src/main/java/com/tjdickerson/sacweather/util/: AssetManagementUtil.java  CrashHelper.java  FetchResponse.java  FileFetcher.java
android/app/src/main/java/com/tjdickerson/sacweather/view/: SacwMapRenderer.java  SacwMapView.java
android/app/src/main/res/layout/: activity_sacwmap.xml
android/app/src/main/res/menu/: menu_quick.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/tjdickerson/sacweather/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
lib/: libbz2.lib
resources/: wsrlist
sacwlib/: gl.h  gl_render.cpp  glad.c  nws_info.cpp  nws_info.h  render_extern.h  sacw_api.h  sacw_extern.h  sacw_main.cpp  stb_truetype.h  tjd_conversions.cpp  tjd_conversions.h  tjd_font.cpp  tjd_font.h  tjd_ftp.cpp  tjd_gl.h  tjd_gl_render.cpp  tjd_level2.cpp  tjd_level2.h  tjd_level3.cpp  tjd_level3.h  tjd_product_desc.h  tjd_radar.cpp  tjd_radar.h  tjd_shapefile.cpp  tjd_shapefile.h  tjd_share.h  tjd_ui.cpp  tjd_ui.h
sacwlib/glad/: glad.h
src/: gl.h  gl_render.cpp  main.cpp  nws_info.cpp  nws_info.h  render_extern.h  sacw_api.h  sacw_extern.h  sacw_main.cpp  tjd_conversions.h  tjd_ftp.cpp  tjd_ftp.h  tjd_radar.cpp  tjd_radar.h  tjd_shapefile.cpp  tjd_shapefile.h  tjd_share.h  win32_main.cpp
windows/: build.bat  tjd_win32_download.cpp  tjd_win32_download.h  win32_main.cpp  win32_menu.cpp  win32_menu.h
